# livva-agent

./: .gitignore  middleware.ts  package.json  pnpm-lock.yaml
.cursor/rules/: general-rule.mdc  nextjs-react-typescript-cursor-rules.mdc
app/: layout.tsx  page.tsx
app/actions/: realtime-search.ts  room-listings.ts
app/components/: realtime-search-button.tsx  room-listings.tsx  search-form.tsx
app/landlord/: page.tsx
app/tenant/: page.tsx
backend/: .gitignore  pyproject.toml  requirements.txt
backend/data-process/: .gitignore  AGENTS.md  README.md  index.ts  main.ipynb  package.json
backend/data-process/data/: README.md
backend/data-process/prisma/: schema.prisma
backend/ipynb/: data-process.ipynb
frontend/: .gitignore  next.config.ts  package.json  pnpm-lock.yaml  prisma.config.ts
frontend/.cursor/rules/: database.mdc  security-and-error-handling.mdc
frontend/app/: layout.tsx
frontend/app/actions/: room-listings.ts
frontend/app/tenant/: page.tsx
frontend/app/tenant/[slug]/: page.tsx
frontend/components/: realtime-search-button.tsx  room-listings.tsx  search-form.tsx
frontend/lib/: data-1.json  data-2.json  prisma.ts
frontend/prisma/: schema.prisma  seed.ts  tsconfig.json
frontend/rules/: prisma-and-validation.mdc  style-rules.mdc  testing-and-quality.mdc
frontend/scripts/: generate-properties.ts
lib/: data.json  data.ts  db-types.ts  prisma.ts  type.ts
prisma/: schema.prisma  seed.ts
scripts/: generate-properties.ts
