[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "fastapi[standard]==0.122.0",
    "idna==3.11",
    "pandas>=2.3.3",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "sniffio==1.3.1",
    "starlette==0.50.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
]
